--- a/css/styles.css
+++ b/css/styles.css
@@ -61,3 +61,10 @@ section{
     box-shadow: 0px 0px 12px 8px rgba(0, 0, 0, 0.1);
 }
 
+.section-title{
+    color: #e9a209;
+    font-size: 1.563rem;
+}
+.section-subtitle{    
+    font-size: 2.1875rem;
+}
