--- a/css/header.css
+++ b/css/header.css
@@ -32,7 +32,7 @@ header{
 
 .nav-item.active a{
    color: #1d1d1d; 
-   border-bottom: 3px solid #ffe100 ;
+   border-bottom: 3px solid var(--color-primary-3);
 }
 
 #mobile_btn{
