--- a/css/home.css
+++ b/css/home.css
@@ -61,7 +61,7 @@
 }
 
 .shape{
-   background-color: #ffe8b4; 
+   background-color: var(--color-primary-2); 
    width: 50%;
    height: 100%;
    position: absolute;
