--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,9 @@
 :root{
     --color-primary-1: #fff9ea;
-    --color-primary-2: 
+    --color-primary-2: #ffe8b4;
+    --color-primary-3: #ffe100;
+    --color-primary-4: #f8d477;
+    --color-primary-5: #ffcb45;
 }
 
 
@@ -12,6 +15,10 @@
     font-style: normal;   
     list-style: none; 
     text-decoration: none;
+}
+
+html{
+    scroll-behavior: smooth;
 }
 
 body{
@@ -29,7 +36,7 @@ section{
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #ffcb45;
+    background-color: var(--color-primary-5);
     border-radius: 12px;
     padding: 10px 14px;
     font-weight: 600;
@@ -39,7 +46,7 @@ section{
 }
 
 .btn-default:hover{
-    background-color: #f8d477;
+    background-color: var(--color-primary-4);
 }
 
 /* Botons Social Midias */
